<resources>
    <string name="app_name">SaveONE life </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donate">Donate Now!</string>
    <string name="be_the_reason">Be The Reason</string>
    <string name="someone_smiles_today">Someone Smiles Today!</string>
    <string name="register_new_orphanage">Hello there,
        Do you wish to register an orphanage?
        Please click the button below to fill the form and follow the instructions.</string>
    <string name="register">Register</string>
    <string name="help_make_donation">Fight poverty right now together with us by making a donation.</string>
    <string name="continue_as_donor">Register as Donor</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="powered_by_wykeesofts_2022">Powered by wykeesofts ©2022</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="i_accept_terms_and_services">I accept policy and </string>
    <string name="sign_up">Sign UP!</string>
    <string name="hello">Hello,</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_txt">Login!</string>
    <string name="terms"><u>Terms</u></string>
    <string name="reset_password_text">Reset your password with few steps, enter your email below.</string>
    <string name="orphanage_children_s_home_name">Orphanage / Children\'s Home Name</string>
    <string name="orphanage_children_s_home_email_address">Orphanage / Children\'s Home Email Address</string>
    <string name="organisation_password">Organisation Password</string>
    <string name="confirm_organisation_password">Confirm Organisation Password</string>
    <string name="next">Next</string>
    <string name="organisation_personal_information">Personal Information</string>
    <string name="organisation_additional_information">Additional Information</string>
    <string name="phone_number_eg_254703_xxx_xxx">Phone Number eg, +254703 XXX XXX</string>
    <string name="till_number_paybill_number_if_any">Till Number / Paybill Number (if any).</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="country_eg_usa">Country eg, (USA)</string>
    <string name="organisation_other_information">Other Information</string>
    <string name="brief_describe_about_the_orphanage">Brief describe more about the orphanage.</string>
    <string name="number_of_children_in_the_orphanage">Number of children in the orphanage.</string>
    <string name="town">County, Sub County, Town, Village</string>
    <string name="finish">Finish</string>
    <string name="login1">Login</string>
    <string name="add_group_image">Add group image</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="loading">Loading...</string>
    <string name="reset_password">Reset password</string>
    <string name="close">Close</string>
    <string name="web_client_ip">882098864882-ll40esaksqrsfu2oovjk7no0lrmv96ut.apps.googleusercontent.com</string>
    <string name="confirm_info_above">Please confirm the information above before you continue.</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="upload_group_photo">Upload group photo</string>
    <string name="geographic_location_optional">Geographic Location(Optional)</string>
    <string name="congratulations">Congratulations</string>
    <string name="sms">
        for registering with us, lets fight POVERTY, HUNGER and improve the
        LEVEL OF EDUCATION together.
        We will contact you within the next 72 hrs to verify the information you have just provided.
        Thanks for sharing with us. In case of any questions,
        please feel free to drop us a line by clicking the button below.
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="learn_more">Learn more</string>
    <string name="please_wait_as_we_search">Please wait as we search</string>
    <string name="million">Hello, Do you know about 9.2% of the world, or 689 million people,
        live in extreme poverty on less than $1.90 a day, according to the World Bank</string>
    <string name="retry">Retry</string>
    <string name="we_searched_all_over_the_world">We searched all over the world,
        we did not find any orphanage registered with that name</string>
    <string name="we_did_not_find_result_of_your_search">We did not find result of your search</string>
    <string name="search_orphanage_around_you">Search orphanage around you</string>
    <string name="donate_here">DONATE HERE</string>
    <string name="what_do_you_need_most_at_the_moment_eg_food">What do you need most at the moment?(eg food)</string>
    <string name="map">AIzaSyAL_Snuh8st6CtGVqrfTsUiIsnt1roLhMU</string>
    <string name="please_your_location">Please your location</string>
    <string name="exact_location_text">Please hold and drag the pin on the map,
        to show exact location of the orphanage home.</string>
    <string name="select_orphanage_location">Select Orphanage Location</string>
    <string name="oops">Oops!</string>
    <string name="location_should_be_allowed_to_continue">Location should be allowed to continue</string>
    <string name="enable_location">ENABLE LOCATION</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="rehema_homes">Rehema Homes</string>
    <string name="search_again">SEARCH AGAIN</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="others">Others</string>
    <string name="customize">Customize</string>
    <string name="about_us">About Us</string>
    <string name="location">location</string>
    <string name="donation_mediums">Donation Medium</string>
    <string name="phone_number">Phone Number</string>
    <string name="bank_bank_number">Bank / Bank number</string>
    <string name="donate_with_mpesa">Donate na mpesa</string>
    <string name="donatena_mpesa">Donate na mpesa</string>
    <string name="orphanage_verified">*Please before donating using the accounts listed below. Please make sure orphanage is verified to avoid any inconveniences and the service of the app.</string>
    <string name="orphanage_information">Orphanage Information</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="gtsy">Good to see you!</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="orphanage_name">Orphanage Name</string>
    <string name="account_name">Account Name</string>
    <string name="orphanage_gmail_com">orphanage@gmail.com</string>
    <string name="leave_a_message">Leave a message/review from your last orphanage visit.</string>
    <string name="please_use_a_respective_language">Please use a respective language!!!</string>
    <string name="warning">
        "Please mind the language you are using on this forum.
        We are determined to ensure no POVERTY, improve LEVEL OF EDUCATION,
        and ZERO HUNGER among the young generation and all in general.
        Offensive and Abusive language may lead to account loss.
        Please read our terms and conditions by clicking the button below"</string>
    <string name="terms_tmc">TERMS</string>
    <string name="close_tms">CLOSE</string>
    <string name="delete_message">Delete Message</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="no_account">No account found</string>
    <string name="no_account_found">
        You need to login / sign up an account to access some stunnig feature.
        But still you can be someone smiles without an account.</string>
    <string name="sign_up_acc">Sign Up?</string>
    <string name="no">No</string>
    <string name="continue_acc">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="profile_name">Profile Name</string>
    <string name="wycliffnjenga19_gmail_com">wycliffnjenga19@gmail.com</string>
    <string name="_254703285070">+254703285070</string>
    <string name="number_of_children_s">Number of children\'s</string>
    <string name="our_location">Our Location</string>
    <string name="in_need_most">In need most</string>
    <string name="more_information">More Information</string>
    <string name="update_profile">Update Profile</string>
    <string name="guide">*If you have changed your account, name, number of children details, please update below. Please fill the fields that you want to update</string>
    <string name="update">UPDATE</string>
    <string name="bank_name">Bank Name</string>
    <string name="basic_information">Basic Information</string>
    <string name="account_information">Account Information</string>
    <string name="not_verified">Not verified</string>
    <string name="what_are_you_planning_to_donate">What are you planning to Donate?</string>
    <string name="donation_description">***This are few of the items you can donate, they include; Food stuff(Sugar, Rice, Wheat flour, etc), Clothes(anything will help), Educational materials(Books, Pens etc). As little as from whatever you can get.</string>
    <string name="donate_">DONATE</string>
    <string name="enter_your_location_mombasa_town">Enter your location (Mombasa Town)</string>
    <string name="food_stuffs">Food stuff</string>
    <string name="clothing_s">Clothing</string>
    <string name="educational_materials">Educational Materials</string>
    <string name="donate_following">Donate:</string>
    <string name="what_s_donated">What\'s donated?</string>
    <string name="see_donation">See Donation</string>
    <string name="who_donated">Who donated?</string>
    <string name="search_for_a_donation">Search for a donation</string>
    <string name="donations">Donations</string>
    <string name="below_is_a_list_donations_you_have_so_far">Donations list</string>
    <string name="donation_descriptions_txt">***If you have received either of the donations please check the checkbox. You can click on any list to call the donor if you have not received the donation.</string>
    <string name="notification">Notifications</string>
    <string name="receive_notification">Would you like to receive notifications from SaveOne life forum?</string>
    <string name="select_language">Select Language</string>
    <string name="real_mode">Real Mode</string>
    <string name="made_with_love">Made with love❤️ by GDSC Taita Taveta University</string>
    <string name="about">About</string>
    <string name="saveone_life_app">SaveONE-life App</string>
    <string name="version">Version</string>
    <string name="_3_26_0_11">3.26.0.11</string>
    <string name="last_update">Last Update</string>
    <string name="march_2022">March, 2022</string>
    <string name="mission">Mission</string>
    <string name="no_poverty">No Poverty</string>
    <string name="zero_hunger">Zero Hunger</string>
    <string name="quality_education">Quality Education</string>
    <string name="term_of_services"><u>Term of services</u></string>
    <string name="map_type">Map type</string>
    <string name="satellite">Satellite</string>
    <string name="default_map">Default</string>
    <string name="terrain">Terrain</string>
    <string name="hyb_rid">Hyb rid</string>
</resources>