<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.landingUI.authfrags.general.LandingScreen">

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/mont"
            android:text="@string/be_the_reason"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont"
            android:text="@string/someone_smiles_today"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/donations"
            android:layout_width="300dp"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            android:src="@drawable/donations" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/mont"
            android:gravity="center"
            android:text="@string/help_make_donation"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/donate_btn"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:background="@drawable/custom_btn"
            android:fontFamily="@font/mont"
            android:text="@string/donate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:fontFamily="@font/mont"
                    android:text="@string/register_new_orphanage"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_new_orphanage_btn"
                    android:layout_width="200dp"
                    android:layout_height="34dp"
                    android:background="@drawable/custom_ring_btn"
                    android:fontFamily="@font/mont"
                    android:text="@string/register"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_as_donor_btn"
                    android:layout_width="200dp"
                    android:layout_height="34dp"
                    android:background="@drawable/custom_btn_no_radius"
                    android:fontFamily="@font/mont"
                    android:text="@string/continue_as_donor"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/mont"
                        android:textColor="@color/blue"
                        android:text="@string/already_have_an_account"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/login_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/mont"
                        android:background="@drawable/custom_colorless_btn"
                        android:textColor="@color/colorAccent"
                        android:text="@string/login"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>