<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="50dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_height="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:padding="18dp"
        android:layout_gravity="center"
        android:fontFamily="@font/mont"
        android:text="@string/we_searched_all_over_the_world"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:fontFamily="@font/mont"
        android:text="@string/we_did_not_find_result_of_your_search"
        android:layout_marginBottom="12dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/search_again"
        android:layout_width="200dp"
        android:textStyle="bold"
        android:fontFamily="@font/mont"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/search_again"
        android:background="@drawable/custom_no_r_btn"
        android:layout_marginBottom="12dp"
        android:layout_height="32dp"/>

</LinearLayout>