<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/motivation_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8.0dip"
        app:cardElevation="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:text="@string/oops"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/mont"
                android:text="@string/location_should_be_allowed_to_continue"/>


            <Button
                android:id="@+id/enable_location"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/enable_location"
                android:background="@drawable/custom_no_r_btn"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>