<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12.0dip"
        app:cardElevation="12.0dip">

        <LinearLayout
            android:orientation="vertical"
            android:padding="8.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14.0sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_type"
                android:fontFamily="serif"
                android:layout_marginStart="12.0dip"
                android:layout_marginTop="16sp"
                android:paddingBottom="12dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/normal"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/default_map"
                        android:layout_height="40dp"/>
                    <TextView
                        android:text="@string/default_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/satellite"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/satellite"
                        android:layout_height="40dp"/>
                    <TextView
                        android:text="@string/satellite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hybrid"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/hybrid"
                        android:layout_height="40dp"/>
                    <TextView
                        android:text="@string/hyb_rid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/terrain"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/terrain"
                        android:layout_height="40dp"/>
                    <TextView
                        android:text="@string/terrain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>